[project]
name = "pratica-poo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jetro",email = "jetrokeplergomes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "mini_biblioteca", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
